Scenarios/AKS-Secure-Baseline-PrivateCluster/Bicep/07-Workload/shoppingDemo/templates/ingress-via-nginx-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: private.contoso.com
    http:
      paths:
      - path: /front(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: store-front
            port:
              number: 80
      - path: /admin(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: store-admin
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: store-front
            port:
              number: 80
